Actions
Bug #10102
closedlibnvfru needs smatch fixes
Start date:
2018-12-19
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
Description
Cast a function to void.
Updated by Electric Monk over 3 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 29c3ebdbcfe9e0ec2a1d2e45961c53e573b9d3ab
commit 29c3ebdbcfe9e0ec2a1d2e45961c53e573b9d3ab Author: John Levon <john.levon@joyent.com> Date: 2019-02-01T19:02:12.000Z 10102 libnvfru needs smatch fixes Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Gergő Doma <domag02@gmail.com> Approved by: Richard Lowe <richlowe@richlowe.net>
Actions